fix: update checkbox hover spacing ( top & right) (#852)

--- a/src/css/Theme/Controls/checkBox.scss
+++ b/src/css/Theme/Controls/checkBox.scss
@@ -13,8 +13,8 @@
     }
 
     .q-checkbox__bg {
-      top: 17%;
-      left: 16%;
+      top: 4px;
+      left: 4px;
       width: 16px;
       height: 16px;
       border: 1px solid currentColor;
